<resources>
    <string name="app_name">E-SIM Attendance Control</string>
    <string name="app_title">E-SIM Attendance Control</string>

    <string name="qr_data">Name: —</string>
    <string name="status_label">Status: —</string>
    <string name="time_label">Time: —</string>
    <string name="date_label">Date: —</string>
    <string name="attendance_history_list_label">Scrollable attendance history list</string>
    <string name="bsit_label">BSIT:</string>

    <string name="scan_qr">Scan QR Code</string>
    <string name="attendance_history">Attendance List</string>
    <string name="export_csv">Export List</string>
    <string name="clear_history">Clear List</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="button_show_chart">Show Attendance Chart</string>

    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="admin_panel_title">Admin Attendance Panel</string>
    <string name="admin_label_section">Section:</string>
    <string name="admin_label_total">Total Records: 0</string>
    <string name="admin_button_logout">Logout</string>
    <string name="hint_search_name">Search name...</string>

    <string name="history_label_total">Total: 0</string>
    <string name="history_button_upload">Upload Attendance</string>

    <string name="graph_button_1y">1st Year</string>
    <string name="graph_button_2y">2nd Year</string>
    <string name="graph_button_3y">3rd Year</string>
    <string name="graph_button_4y">4th Year</string>

    <string name="scanner_title">Scan Student QR Code</string>
    <string name="scanner_button_flash">Flash</string>

    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="radio_time_in_am">Time In (AM)</string>
    <string name="radio_time_out_am">Time Out (AM)</string>
    <string name="radio_time_in_pm">Time In (PM)</string>
    <string name="radio_time_out_pm">Time Out (PM)</string>
</resources>