<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:padding="16dp">

    <Spinner
        android:id="@+id/sectionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sectionSpinner"
        app:layout_constraintBottom_toTopOf="@id/yearButtonsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/yearButtonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFirstYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/graph_button_1y"
            android:paddingVertical="12dp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/md_theme_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSecondYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/graph_button_2y"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="12dp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/md_theme_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonThirdYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/graph_button_3y"
            android:paddingVertical="12dp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/md_theme_primary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFourthYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/graph_button_4y"
            android:paddingVertical="12dp"
            app:cornerRadius="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/md_theme_primary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
